# ABFE_workflow

./: .gitignore  .readthedocs.yml  ABFE_Calculator.py  AUTHORS  MANIFEST.in  README.md  README.rst  Snakefile  calc_ABFE.py  environment.yml  environment_dev.yml  environment_pinned.yml  environment_pinnedVersions.yml  pyproject.toml  setup.cfg
.conda_create_env/: environment.yml
.github/workflows/: build-package.yml  python-build-package.yml
abfe/: __init__.py  _version.py  calculate_abfe.py  calculate_abfe_gmx.py  cli.py
abfe/abfe/orchestration/: build_and_run_ligands.py  generate_conf.py  generate_snake.py
abfe/abfe/rules/equilibration/: Snakefile  complex_equil.smk  ligand_equil.smk  ligand_equil_setup.smk
abfe/abfe/rules/fep/: Snakefile  calculate_result.smk  complex_fep.smk  complex_fep_setup.smk  ligand_fep.smk  ligand_fep_setup.smk
abfe/abfe/template/complex-fep/: coul.sub  rest.pre-prod.sub  setup.sh
abfe/orchestration/: build_and_run_ligands.py  build_approach_flow.py  build_ligand_flow.py  generate_conf.py  generate_scheduler.py  generate_snake.py
abfe/rules/: __init__.py
abfe/rules/equilibration/: Snakefile  complex_equil.smk  complex_equil_setup.smk  complex_equil_simulation.smk  ligand_equil.smk  ligand_equil_setup.smk  ligand_equil_simulation.smk
abfe/rules/fep/: Snakefile  calculate_result.smk  complex_fep.smk  complex_fep_ana.smk  complex_fep_setup.smk  complex_fep_simulation.smk  ligand_fep.smk  ligand_fep_ana.smk  ligand_fep_setup.smk  ligand_fep_simulation.smk
abfe/rules/ligand_equilibration_workflow/: complex_equil_setup.smk  complex_equil_simulation.smk  ligand_equil_setup.smk  ligand_equil_simulation.smk
abfe/rules/ligand_fep_workflow/: Snakefile  ligand_fep_setup.smk
abfe/rules/receptor_workflow/: Snakefile  Snakefile_gmx  build_ligand_systems.smk  post_commands.smk  simulations.smk
abfe/rules/superFlow/: Superflow.smk  post_commands.smk
abfe/rules/system_generation/: build_system.smk
abfe/scripts/: alchemlyb-analysis-complex.py  alchemlyb-analysis-ligand.py  alchemlyb_analysis.py  boresch.py  calculate_ABFE_dG.py  final_receptor_results.py  provide_final_approach_results.py
abfe/scripts/free_energy/: alchemlyb_analysis.py  calculate_ABFE_ligand_dG.py  calculate_ABFE_transformation_dG.py
abfe/scripts/preparation/: generate_ABFE_systems.py  generate_boresch_restraints.py  gmx_topology.py  parametrize.py  system_builder.py  topology_fixer.py
abfe/template/: __init__.py
abfe/template/complex-equil-mdsim/boreschcalc/: boresch.py  trjconv.sh
abfe/template/complex-equil-mdsim/emin/: emin.bash
abfe/template/complex-equil-mdsim/npt_prod1/: npt_prod1.bash
abfe/template/complex-equil-mdsim/nvt_heat/: nvt_heat.bash
abfe/template/complex-fep/: coul.pre-prod.sub  restraint.sub  vdw.pre-prod.sub  vdw.sub
abfe/template/complex_equil_workflow/npt_equil1/: npt_equil1.mdp
abfe/template/gmx_submit_kernels/: bi_gpu_job.sh  bi_gpu_job_cont.sh  def_cpu_job.sh  def_cpu_job_cont.sh  def_gpu_job_cont.sh
abfe/template/ligand-equil-mdsim/: README.md  run.all
abfe/template/ligand-equil-mdsim/emin/: emin.bash
abfe/template/ligand-equil-mdsim/npt_equil1/: npt_equil1.bash
abfe/template/ligand-equil-mdsim/npt_equil2/: npt_equil2.bash
abfe/template/ligand-equil-mdsim/nvt_heat/: nvt_heat.bash
abfe/template/ligand-fep/: coul.sub  setup.sh  vdw.sub
abfe/template/ligand_equil_workflow/npt_equil2/: npt_equil2.mdp
abfe/template/ligand_equil_workflow/nvt_heat/: nvt_heat.mdp
abfe/utils/: calc_ABFE.py  converter.py  generate_input.py
abfe_cli/: ABFECalculator.py  ABFECalculatorGmx.py
docs/: conf.py  index.rst  make.bat
docs/notebooks/: quickstart.ipynb
docs/source/: api.rst  citations.rst  installation.rst
docs/source/modules/: data.rst
examples/: README.md  cluster_config.yml  example_execution.py  example_execution.sh  example_execution_gmx.sh  example_execution_gmx_input.sh  example_hsp90_gmx.sh
examples/2VT4/: example_execution.py
examples/2VT4/inputs/: dummy_cofactor_23.mol
examples/2VT4/inputs/ligands/: inhibitor_11.mol  inhibitor_12.mol  inhibitor_17.mol  inhibitor_2.mol  inhibitor_24.mol  inhibitor_28.mol  inhibitor_3.mol  inhibitor_4.mol  inhibitor_6.mol  inhibitor_9.mol  ligand.mol
examples/CyclophilinD_data/input/ligands/: ligand-14.sdf  ligand-16.sdf  ligand-2.sdf  ligand-27.sdf  ligand-3.sdf  ligand-39.sdf  ligand-4.sdf  ligand-40.sdf  ligand-7.sdf  (+1 more)
examples/data/CyclophilinD_min/: CyclophilinD_min_abfe_results.tsv
examples/data/HSP90_gmx/: HSP90_gmx_abfe_results.tsv
orchestration/: generate_scheduler.py
rules/: complex_equil.smk  complex_fep.smk  ligand_equil.smk  ligand_fep.smk
rules/equilibration/: complex_equil.smk  complex_equil_setup.smk  ligand_equil.smk  ligand_equil_simulation.smk
rules/fep/: Snakefile  calculate_result.smk  complex_fep.smk  complex_fep_setup.smk  complex_fep_simulation.smk  ligand_fep.smk  ligand_fep_setup.smk  ligand_fep_simulation.smk
scripts/: __init__.py  alchemlyb-analysis-complex.py  alchemlyb-analysis-ligand.py  boresch.py
src/abfe/: __init__.py  _version.py  calculate_abfe.py  calculate_abfe_gmx.py  cli.py  conf.py  home.py
src/abfe/orchestration/: build_approach_flow.py  build_ligand_flow.py  generate_conf.py  generate_scheduler.py  generate_snake.py  slurm_status.py
src/abfe/rules/: __init__.py
src/abfe/scripts/: __init__.py  abfe_slurm_status.py  final_receptor_results.py
src/abfe/template/: __init__.py
src/abfe/utils/: DEBUG_submit_all_approachjobs.sh  build_dag_png.sh  check_dag_completion.sh  converter.py
src/abfe_cli/: ABFECalculator.py  ABFECalculatorGmx.py  ABFEGatherResults.py
template/complex-equil-mdsim/: README.md  run.all
template/complex-equil-mdsim/emin/: enmin.bash  enmin.mdp
template/complex-equil-mdsim/npt_equil1/: npt_equil1.bash
template/complex-equil-mdsim/npt_equil2/: npt_equil2.bash
template/complex-equil-mdsim/nvt_heat/: nvt_heat.bash
template/ligand-equil-mdsim/: README.md  run.all
template/ligand-equil-mdsim/emin/: enmin.bash  enmin.mdp
template/ligand-equil-mdsim/nvt_heat/: nvt_heat.bash
(+321 files in other folders)
