[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project.urls]
"Hompage" = "https://github.com/bigginlab/ABFE_workflow"
"Discussions" = "https://github.com/bigginlab/ABFE_workflow/discussions"
"Documentation" = "https://ABFE_workflow.readthedocs.io/en/latest/"
"Issues" = "https://github.com/bigginlab/ABFE_workflow/issues"

[project]
name = "abfe"
dynamic = ["version"]
description = "A snakemake based workflow for ABFE calculations using GMX."
readme = "README.rst"

authors=[
    {name="Benjamin Ries", email="benjamin-ries@outlook.com"},
    {name="Irfan Alibay", email="irfan.alibay@gmail.com"},
    {name="Alejandro Martínez-León", email="ale94mleon@gmail.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GPL-3.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = [
    "science",
    "chemistry",
    "biology",
    "drug-design"
]

requires-python = ">= 3.8 , < 3.10"
dependencies = [
    "alchemlyb == 2.0.0",
    "pymbar == 4.0.1",
    "MDRestraintsGenerator",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "mdanalysis",
    "TOFF",
    "tabulate == 0.8.10",
    "pyyaml",
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/abfe/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abfe = [
    "data/gmx_ff/*.tar.gz",
    "template/**/*.mdp", 
    "rules/**/*.smk",
    "rules/**/Snakefile"
]

[project.scripts]
abfe-calculator = "abfe.cli:abfe_run"