[build-system]
requires=[
	"setuptools>=61.0",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "ABFE_Workflow"
dynamic = ["version"]
authors=[
    {name="Benjamin Ries", email="benjamin.ries@boehringer-ingelheim.com"},
    {name="Irfan Alibay"},
    {name="Philip Biggins", email="philip.biggin@bioch.ox.ac.uk"},
    {name="Aniket Magarkar", email="aniket.magarkar@boehringer-ingelheim.com"},

]
dependencies = [
  'snakemake',
  'pymbar',
  'alchemlyb',
  'gromacs',
  'numpy',
  'pandas',
  'matplotlib',
  'argparse'
]
description="ABFE Workflow is a pipeline variant of our prior work."
readme="README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bigginlab/ABFE_workflow"

[project.scripts]
cli-abfe = "abfe_cli.ABFECalculator:main"
cli-abfe-gmx = "abfe_cli.ABFECalculatorGmx:main"
cli-abfe-gather ="abfe_cli.ABFEGatherResults:main"
abfe_slurm_status ="abfe.scripts.abfe_slurm_status:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abfe = ["**/*.sh", "**/*.smk", "**/*.mdp", "**/*.json"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git"
match = ["*"]
default-tag = "0.0.0"

[tool.versioningit.write]
file = "src/abfe/_version.py"
