[metadata]
name = abfe
version = attr: abfe.__version__
author = Benjamin Ries
author_email = benjamin-ries@outlook.com
description = A snakemake based workflow for ABFE calculations using GMX.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/bigginlab/ABFE_workflow
project_urls =
    Discussions = https://github.com/bigginlab/ABFE_workflow/discussions
    Documentation = https://ABFE_workflow.readthedocs.io/en/latest/
    Issues = https://github.com/bigginlab/ABFE_workflow/issues
license = GPL-3.0
license_files = LICENSE
platforms = linux
classifiers =
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL-3.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    science
    chemistry
    biology
    drug-design

[options]
packages = find:
package_dir =
    =.
python_requires = >= 3.8 , < 3.10
include_package_data = True
install_requires =
    alchemlyb == 2.0.0
    pymbar == 4.0.1
    MDRestraintsGenerator
    matplotlib
    numpy
    scipy
    pandas
    mdanalysis
    TOFF
    tabulate == 0.8.10
    pyyaml
[options.entry_points]
console_scripts =
    abfe-run = abfe.cli:abfe_run